--- a/01-WEBSTANDARD/css/reset.css
+++ b/01-WEBSTANDARD/css/reset.css
@@ -4,11 +4,11 @@
 
     /* 여백 초기화 */ 
     body,div,ul,li,dl,dd,dt,ol,h1,h2,h3,h4,h5,h6,input,fieldset,legend,p,
-    select,table,th,td,tr,textarea,button,form { margin:0;padding:0; }
+    select,table,th,td,tr,textarea,button,form {margin:0;padding:0;}
 
     /* a 링크 초기화 */
-    a { color: #222; text-decoration: none; }
-    a:hover { color: #390; }
+    a {color: #222; text-decoration: none;}
+    a:hover {color: #390;}
 
     /* 폰트 초기화 */
     /* 웹 폰트를 적용하면 컴퓨터에 자동으로 설치 후 폰트를 보여주게 함
@@ -23,14 +23,17 @@
     }
 
     /* 폰트 스타일 초기화 */
-    em {font-style: normal;}
+    em, address {font-style: normal;}
 
     /* 불릿기호 초기화 */
-    dl, ul, li, ol, menu { list-style: none; }
+    dl, ul, li, ol, menu {list-style: none;}
 
      /* 제목 태그 초기화 */
     h1, h2, h3, h4, h5, h6 {font-size: 13px; color:#222; font-weight: normal;}
         
+    /* 테두리 초기화 */
+    img, fieldset {border:0 none;}
+
     /* margin, padding */ /* !important 우선순위 */
     /* 원본 소스를 해치지 않고 빠르게 작업하기 위해 미리 만들어 둠 */
     .mt10 {margin-top: 10px !important;}
@@ -58,8 +61,8 @@
     .ir_su {overflow: hidden; position: absolute; width: 0; height: 0; line-height: 0; text-indent: -9999px;} 
 
     /* 스킵 내비게이션 */
-    #skip { position: relative; }
-    #skip a { position: absolute; left: 0px; top: -35px; border: 1px solid #fff; color: #fff; background: #333; line-height: 30px; width: 140px; text-align: center;
+    #skip {position: relative;}
+    #skip a {position: absolute; left: 0px; top: -35px; border: 1px solid #fff; color: #fff; background: #333; line-height: 30px; width: 140px; text-align: center;
     /*  position: absolute;
         위치 절대적 = 자유자재 
         영역이 사라지는 문제점이 있어 붕 뜨는 현상이 있음 
@@ -67,4 +70,4 @@
     */
     }
     /* 탭키 */
-    #skip a:active, #skip a:focus { top: 0; }
+    #skip a:active, #skip a:focus {top: 0;}
