--- a/01-WEBSTANDARD/css/style.css
+++ b/01-WEBSTANDARD/css/style.css
@@ -1,8 +1,8 @@
     /* 레이아웃 */
     #wrap {  }
-    #header { height: 325px; background:  url(../img/header_bg.jpg)center top repeat-x; }
+    #header {height: 325px; background:  url(../img/header_bg.jpg)center top repeat-x;}
     #content {  }
-    #footer { height: 200px; background: #333; }
+    #footer {border-top: 1px solid #eee;}
 
     /* 컨텐츠 레이아웃 */
     #cont_nav {background-color: #f6fdff;}
@@ -11,7 +11,7 @@
     #cont_cont {background-color: #f6fdff;}
 
     /* 컨테이너 */
-    .container { width: 100%; width: 990px; margin: 0 auto; height: inherit; /*background: rgba(255,255,255,0.3);*/ }
+    .container {width: 100%; width: 990px; margin: 0 auto; height: inherit; /*background: rgba(255,255,255,0.3);*/}
 
     /* 헤더 */
     /* 태그는 inline 과 block 으로 나뉨*/
@@ -28,8 +28,8 @@
     .header .header-tit h1 {background-color: #4aa8d4; font-size: 28px; padding: 5px 20px 6px 20px; display: inline-block; color: #fff; margin-top: 40px; font-weight: normal; /* h1 태그는 기본적으로 폰트 굵기가 bold 로 설정되어 있기 때문에 normal 로 설정해준다. */ text-transform: uppercase;}
     .header .header-tit a {display: inline-block; background-color: #2698cb; font-size: 18px; color: #fff; padding: 5px 20px 6px 20px; margin-top: -5px;}
 
-    .header .header-icon { text-align: center; margin-top: 30px; }
-    .header .header-icon a { width: 60px; height: 60px; display: inline-block; background: url(../img/icon.png); margin: 0 3px;}
+    .header .header-icon {text-align: center; margin-top: 30px;}
+    .header .header-icon a {width: 60px; height: 60px; display: inline-block; background: url(../img/icon.png); margin: 0 3px;}
 
     .header .header-icon a.icon1 {background-position: 0 0;}
     .header .header-icon a.icon2 {background-position: 0 -60px;}
@@ -184,10 +184,104 @@
     .notice_hover2 {}
     .notice_hover2 ul {overflow: hidden;}
     .notice_hover2 li {float: left; width: 93px; text-align: center; margin-right: 5px;}
-    .notice_hover li:last-child {margin-right: 0;} /* last-child / ie9 부터 적용 */
-    .notice_hover li.last {margin-right: 0;} /* 모든 브라우저 버전 적용 */
-    .notice_hover2 li a span {position: relative; display: block; width:93px; height: 93px;}
-    .notice_hover2 li a span img {width: 100%;}
-    .notice_hover2 li a span img em {position: absolute; left: 0; bottom: 0; width: 100%; background: rgba(0,0,0,0.7); color: #fff;}
-    .notice_hover2 li a strong {}
+    .notice_hover2 li.last {margin-right: 0;} /* 모든 브라우저 버전 적용 */
+    .notice_hover2 li a {}
+    .notice_hover2 li a span {position: relative; display: block; width: 93px; height: 93px;}
+    .notice_hover2 li a span img {width: 100%; }
+    /* height:100% (X), bottom: 0; */
+    .notice_hover2 li a span em {visibility: hidden; position: absolute; left: 0; bottom: 0; width: 100%; background: rgba(0,0,0,0.7); color:#fff;}
+    .notice_hover2 li a span:hover em {visibility: visible;}
+    .notice_hover2 li a strong {padding-top: 3px; display: inline-block; font-size: 12px;}
     
+    /* 콘텐츠 요소를 보이지 않게하는 방법 
+    1. display: none; -- display: block; (영역이 사라짐)
+    2. visibility: hidden; -- visibility: visible; (영역유지)
+    3. opasity: 0; -- opasity: 1; (영역유지)
+    4. width: 0; height: 0; overflow: hidden; (ir효과)
+    */
+
+    /* 탭 메뉴 */
+    /* border / 선이 겹치는 문제 / margin-right: -1px; margin-bottom: -1px; */
+    /* 두 줄 효과를 한 줄로 보이게 함 */
+    /* ul li ul 기준점 */
+    .tab_menu {position: relative; border: 1px solid #ccc; padding: 8px; height: 105px;} 
+    .tab_menu ul {overflow: hidden; border-bottom: 1px solid #ccc;}
+    .tab_menu ul li {float: left; border: 1px solid #ccc; margin-right: -1px; margin-bottom: -1px;}
+    /* 주의 / .tab_menu ul li ul li a 와 같이 먹힘 */
+    /* inline -> block 화 : hover 효과 먹히기 위해 a 태그에 padding 적용*/
+    .tab_menu ul li a {padding: 5px 10px; display: block;}
+    /* 전체 영역 잡아주기 */
+    .tab_menu ul li ul {position: absolute; left: 0; top: 48px; width: 270px; border: 0;}
+    /* 속성 없애기 */
+    .tab_menu ul li ul li {float: none; border: 0; background: url(../img/dot.gif) no-repeat 9px 8px; padding-left: 18px;}
+    /* 한줄 효과 적용 */ /* 박스 안에 위치 / padding: 0 0 3px 0; */
+    .tab_menu ul li ul li a {overflow: hidden; text-overflow: ellipsis; white-space: nowrap; width: 100%; padding: 0 0 3px 0;}
+    /* 스크립트로 처리 */
+    .tab_menu ul li.active {background: #2c94c4;}
+    .tab_menu ul li.active a {color: #fff;}
+    .tab_menu ul li.active ul li a {color: #333;}
+
+    /* 게시판4 */    
+    .notice4 {position: relative; border: 1px solid #ccc;} /* 더보기 기준점 */
+    .notice4 h4 {border-bottom: 1px solid #ccc; font-size: 14px; color: #0093bd; font-weight: 700; padding: 8px 10px;} /* 패딩-여백을 없애기 위해 h4에 적용 */
+    .notice4 h4 em {color: #cf3292;}
+    .notice4 ul {padding: 10px;}
+    .notice4 li {overflow: hidden; background: url(../img/dot.gif) no-repeat 0 8px; padding-left: 8px; padding-bottom: 2px;}
+    .notice4 li a {float: left; width: 60%; overflow: hidden; text-overflow: ellipsis; white-space: nowrap;}
+    .notice4 li span {float: right; width: 30%; text-align: right;}
+    .notice4 a.more {position: absolute; right: 9px; top: 9px;}
+
+    /* 갤러리 */
+    /* gallery_btn 기준점 */
+    .gallery {position: relative; border: 1px solid #ccc; height: 254px; overflow: hidden;}
+    .gallery h4 {font-size: 14px; color: #0093bd; border-bottom: 1px solid #ccc; padding: 10px 0 8px 11px; font-weight: bold;}
+    .gallery .gallery_btn {position: absolute; right: 5px; top: 7px;}
+    .gallery .gallery_btn ul {overflow: hidden;}
+    .gallery .gallery_btn li {float: left; margin: 1px 2px;}
+    .gallery .gallery_btn li a {display: block; width: 23px; height: 23px; background: url(../img/icon.png) no-repeat;}
+    /* 이미지 스프라이트 */
+    .gallery .gallery_btn li.gb_icon1 a {background-position: -150px -120px;}
+    .gallery .gallery_btn li.gb_icon2 a {background-position: -150px -143px;}
+    .gallery .gallery_btn li.gb_icon3 a {background-position: -150px -166px;}
+    .gallery .gallery_btn li.gb_icon4 a {background-position: -150px -189px;}
+    .gallery .gallery_btn li.gb_icon1 a:hover {background-position: -173px -120px;}
+    .gallery .gallery_btn li.gb_icon2 a:hover {background-position: -173px -143px;}
+    .gallery .gallery_btn li.gb_icon3 a:hover {background-position: -173px -166px;}
+    .gallery .gallery_btn li.gb_icon4 a:hover {background-position: -173px -189px;}
+    .gallery .gallery_img img {width: 100%;} /* 이미지를 화면 비율에 맞추기 */
+    
+    /* 로그인 */
+    #login-wrap {margin-bottom: 15px; background: #f2f4f5; padding: 15px;}
+    .login_header {overflow: hidden; font-size: 12px; height: 30px;}
+    /* (상위)overflow: hidden - (하위)float:left; */
+    .login_header .lh_check {float: left; padding-right: 15px;}
+    .login_header .lh_check .input_check {vertical-align: -2px;}
+    .login_header .lh_ip {float: left;}
+    .login_header .lh_ip em {color: #0093bd; text-decoration: underline;}
+    /* lc_btn 기준점 */
+    .login_content {position: relative;}
+    .login_content .lc_btn {position: absolute; right: 0; top: 0; width: 62px; height: 47px; background: #fff; border: 1px solid #bebebe;}
+    .login_content  .input_text {width: 182px; height: 16px; padding: 2px 5px; border: 1px solid #bebebe; margin-bottom: 3px; background: #fff;}
+    .login_footer {margin-top: 5px;}
+    /* 단순히 글씨만 있기 때문에 inline 으로 정렬 */
+    .login_footer li {display: inline;}
+    .login_footer li a {font-size: 12px;}
+    
+    /* 팝업 */
+    .popup h4 {font-size: 14px; color: #0093bd; padding-bottom: 4px; font-weight: 700;}
+    .popup ul {overflow: hidden;}
+    .popup li {float: left; width: 93px; margin-right: 5px;}
+    .popup li.last {margin-right: 0;}
+    .popup li img {width: 100%;}
+    
+    /* 푸터 */
+    .footer {padding: 25px 0; text-align: center;}
+    .footer ul {margin-bottom: 20px;}
+    /* float:left - text-align: center; 안먹힘 */
+    /* 그래서 가로정렬 방법 중 display: inline; 사용 */
+    /* :before 기준점 */
+    .footer li {position: relative; display: inline; padding: 0 7px 0 10px;}
+    /* 가상요소 :before / 가상으로 요소를 넣어줌 */
+    .footer li:before {content: ''; width: 1px; height: 12px; background: #ccc; position: absolute; left: 0; top: 2px;} /* ie9 */
+    .footer li:first-child:before {width: 0; height: 0;}
+    .footer .w3c {margin-top: 15px;}
