--- a/01-WEBSTANDARD/css/style.css
+++ b/01-WEBSTANDARD/css/style.css
@@ -5,7 +5,7 @@
     #footer {border-top: 1px solid #eee;}
 
     /* 컨텐츠 레이아웃 */
-    #cont_nav {background-color: #f6fdff;}
+    #cont_nav {background-color: #f6fdff; display:none;}
     #cont_tit {background-color: #EAF7FD;}
     #cont_ban {background-color: #dceff7;}
     #cont_cont {background-color: #f6fdff;}
@@ -76,26 +76,48 @@
         반응형에 좋지 않음
     position: absolute */
     .tit .btn {position: absolute; top: 5px; right: 0; width: 60px; height: 60px; background: url(../img/icon.png) no-repeat 0 -600px;}
+    .tit .btn.on {background-position: 0 -660px;}
 
     /* 배너 */
+    /* 
     .ban {position: relative; padding: 24px 0 20px;}
-    /* a는 본명 prev는 가명 */
+    // a는 본명 prev는 가명
     .ban a.prev {position: absolute; left: -80px; top: 60px; width: 43px; height: 43px; background: url(../img/icon.png) no-repeat -150px 0;} 
     .ban a.next {position: absolute; right: -80px; top: 60px; width: 43px; height: 43px; background: url(../img/icon.png) no-repeat -150px -43px;}
     .ban a.prev:hover {background-position: -193px 0;}
     .ban a.next:hover {background-position: -193px -43px;}
-    /* 상위 박스 overflow: hidden */
+    // 상위 박스 overflow: hidden
     .ban ul {overflow: hidden;}
     .ban ul li {float: left; width: 330px;}
-    .ban ul li:last-child {text-align: right;} /* ie9 부터 적용 */
-    /* 2번째 요소 */
-    .ban ul li:nth-child(2) {text-align: center;} /* ie9 부터 적용 */
-    /* text-align 는 inline 구조에만 적용 가능 */
-    .ban ul li.ban_img1 {text-align: left;} /* ie8 */
+    .ban ul li:last-child {text-align: right;} // ie9 부터 적용
+    // 2번째 요소
+    .ban ul li:nth-child(2) {text-align: center;} // ie9 부터 적용
+    // text-align 는 inline 구조에만 적용 가능
+    .ban ul li.ban_img1 {text-align: left;} // ie8
     .ban ul li.ban_img2 {text-align: center;}
     .ban ul li.ban_img3 {text-align: right;}
     .ban ul li img {border: 4px solid #dcdcdc;}
     .ban ul li img:hover {border-color: #98bcdc;}
+    */
+
+    /* 슬릭 배너 */
+    .ban {position: relative; padding: 24px 0 20px;}
+    /* slick 라이브러리에서 부여한 이름 - 검사를 통해 확인 */
+    /* text-indent: -9999px; / 글씨 안보이게 작업 */
+    .ban .slick-prev {position: absolute; left: -80px; top: 80px; width: 43px; height: 43px; background: #ccc; background: url(../img/icon.png) no-repeat -150px 0; text-indent: -9999px;}
+    .ban .slick-next {position: absolute; right: -80px; top: 80px; width: 43px; height: 43px; background: #ccc; background: url(../img/icon.png) no-repeat -150px -43px; text-indent: -9999px;}
+    .ban .slick-prev:hover {background-position: -193px 0;}
+    .ban .slick-next:hover{background-position: -193px -43px;}
+    .ban img {border: 4px solid #dcdcdc;}
+    .ban img:hover {border-color: #98bcdc;}
+    .ban .slick-slide {margin: 10px;}
+    .ban .slick-dots {position: absolute; bottom: 15px; display: block; width: 100%; text-align: center;}
+    /* inline-block / 가로 정렬 */
+    .ban .slick-dots li {display: inline-block; width: 15px; height: 15px; margin: 5px;}
+    /* font-size: 0; line-height: 0; / 글씨 없애기 */
+    .ban .slick-dots li button {font-size: 0; line-height: 0; display: block; width: 15px; height: 15px; cursor: pointer; background: #5dbfeb; border-radius: 50%;}
+    /* 활성화 */
+    .ban .slick-dots li.slick-active button {background: #2b91c8;}
 
     /* 컨텐츠 */
     .cont {overflow: hidden; padding-top: 30px;}
@@ -233,7 +255,7 @@
 
     /* 갤러리 */
     /* gallery_btn 기준점 */
-    .gallery {position: relative; border: 1px solid #ccc; height: 254px; overflow: hidden;}
+    .gallery {position: relative; border: 1px solid #ccc; height: 255px; overflow: hidden;}
     .gallery h4 {font-size: 14px; color: #0093bd; border-bottom: 1px solid #ccc; padding: 10px 0 8px 11px; font-weight: bold;}
     .gallery .gallery_btn {position: absolute; right: 5px; top: 7px;}
     .gallery .gallery_btn ul {overflow: hidden;}
@@ -248,8 +270,21 @@
     .gallery .gallery_btn li.gb_icon2 a:hover {background-position: -173px -143px;}
     .gallery .gallery_btn li.gb_icon3 a:hover {background-position: -173px -166px;}
     .gallery .gallery_btn li.gb_icon4 a:hover {background-position: -173px -189px;}
-    .gallery .gallery_img img {width: 100%;} /* 이미지를 화면 비율에 맞추기 */
-    
+    .gallery .gallery_img img {width: 100%;} 
+    /* 이미지를 화면 비율에 맞추기 */
+
+    /* slick 갤러리 */
+    /* li+a */
+     .gallery .gallery_btn button {float: left; margin: 1px 2px; display: block; width: 23px; height: 23px; background: url(../img/icon.png) no-repeat;}
+    .gallery .gallery_btn .gb_icon1 {background-position: -150px -120px;}
+    .gallery .gallery_btn .gb_icon2 {background-position: -150px -143px;}
+    .gallery .gallery_btn .gb_icon3 {background-position: -150px -166px;}
+    .gallery .gallery_btn .gb_icon4 {background-position: -150px -189px;}
+    .gallery .gallery_btn .gb_icon1:hover {background-position: -173px -120px;}
+    .gallery .gallery_btn .gb_icon2:hover {background-position: -173px -143px;}
+    .gallery .gallery_btn .gb_icon3:hover {background-position: -173px -166px;}
+    .gallery .gallery_btn .gb_icon4:hover {background-position: -173px -189px;}
+
     /* 로그인 */
     #login-wrap {margin-bottom: 15px; background: #f2f4f5; padding: 15px;}
     .login_header {overflow: hidden; font-size: 12px; height: 30px;}
@@ -285,3 +320,11 @@
     .footer li:before {content: ''; width: 1px; height: 12px; background: #ccc; position: absolute; left: 0; top: 2px;} /* ie9 */
     .footer li:first-child:before {width: 0; height: 0;}
     .footer .w3c {margin-top: 15px;}
+
+    /* 레이어 팝업 */
+    #layer {display: none; position: fixed; left: 50px; top: 50px; width: 700px; border: 10px solid #dceff7; box-shadow: 3px 3px 10px rgba(0,0,0,0.4);}
+    /* 여백이 생기는 이유 
+        이미지는 인라인 요소여서 숨은 공간이 있음  */
+    #layer img {width: 100%; display:block;}
+    #layer .close {position: absolute; right: 20px; top: 20px; background: #0093bd; padding: 1px 6px; color:#fff;}
+    #layer .close:hover {text-decoration: underline;}
