--- a/02-RESPONSIVE/css/style.css
+++ b/02-RESPONSIVE/css/style.css
@@ -110,7 +110,7 @@
     }
 
     /* 전체 메뉴 */
-    .nav {overflow: hidden; padding: 25px 0;}
+    .nav {overflow: hidden; padding: 25px 0; display: none;}
     .nav > div {float: left; width: 40%;}
     .nav > div:last-child {width: 20%;}
     .nav > div ol {overflow: hidden;}
@@ -178,6 +178,23 @@
     .column.col8 {}
     .column.col9 {border-bottom: 0;}
     
+    /* 메뉴 */
+    .menu {}
+    .menu li {position: relative;} /* menu li a i = 기준점 */
+    .menu li a {
+        font-size: 16px; text-transform: uppercase;
+        color: #878787; border-bottom: 1px solid #dbdbdb;
+        padding: 10px; display: block;
+        transition: box-shadow 0.34s ease, background 0.34s ease;
+    }
+    .menu li a i {
+        position: absolute; right: 10px; top: 15px;
+    }
+    .menu li a:hover {
+        box-shadow: inset 180px 0 0 0 rgba(36,130,174,0.7);
+        color: #fff;
+        background: rgba(36,130,174,0.9);
+    }
 
     /* mediaquery */
     /* 화면 너비 0 ~ 1220px */
@@ -227,6 +244,15 @@
         /* 2줄 */
         .nav > div li {width: 50%;}
         .nav > div:last-child li {width: 50%;}
+        
+        .column.col1 {padding: 0; border-bottom: 0;}
+        .column.col1 .col_tit {display: none;}
+        .column.col1 .col_desc {display: none;}
+        
+        .column.col1 .menu ul {overflow: hidden;}
+        .column.col1 .menu li {float: left; width: 33.3333%; border-right: 1px solid #dbdbdb; text-align: center;}
+        .column.col1 .menu li i {display: none;}
+        .column.col1 .menu li a {color: #fff;}
     }
 
     /* 화면 너비 0 ~ 480px */
