--- a/02-RESPONSIVE/css/style.css
+++ b/02-RESPONSIVE/css/style.css
@@ -195,74 +195,64 @@
         color: #fff;
         background: rgba(36,130,174,0.9);
     }
-
-    /* mediaquery */
-    /* 화면 너비 0 ~ 1220px */
-    @media (max-width: 1220px){
-        .container {width: 100%;}
-        .row {padding: 0 15px;}
-        #contents .container {border: 0;} 
-        /* border = scrollbar 가 생기는 영역 */
-        .title .btn {right: 5px;} /* 여백 */
+    
+    /* 게시판1 */
+    .notice1 {position: relative; /* notice1 .more = 기준점 */}
+    .notice1 h5 {font-size: 14px; color: #2f7fa6; padding-bottom: 5px;}
+    .notice1 li {
+        position: relative; 
+        overflow: hidden; text-overflow: ellipsis; white-space: nowrap; 
+        padding-left: 8px;    
+    }
+    .notice1 li:before {
+        content: '';
+        width: 3px; height: 3px;
+        border-radius: 50%;
+        background: #449ce2;
+        position: absolute; left: 0; top: 6px;
+    }
+    .notice1 .more {
+        position: absolute; right: 0; top: 3px;
+        color: #878787;
+        text-transform: uppercase;
+        font-size: 10px;
+    }
+    
+    /* 게시판2 = 두줄효과 */
+    .notice2 {position: relative;}
+    .notice2 h5 {font-size: 14px; color: #2f7fa6; padding-bottom: 5px;}
+    .notice2 li {
+        position: relative;
+        overflow: hidden; text-overflow: ellipsis;
+        display: -webkit-box; /* -webkit- = 브라우저 호환 */
+        -webkit-box-orient: vertical; /* 방향성 / chrome 호환 */
+        -webkit-line-clamp: 2; /* n줄 */
+        padding-left: 8px;
+        margin-bottom: 5px;
+        max-height: 40px; /* ie 버전 */
+    }
+    .notice2 li:before {
+        content: '';
+        width: 3px; height: 3px;
+        border-radius: 50%;
+        background: #449ce2;
+        position: absolute; left: 0; top: 6px;
+    }
+    .notice2 .more {
+        position: absolute; right: 0; top: 3px;
+        color: #878787;
+        text-transform: uppercase;
+        font-size: 10px;
     }
 
-    /* 화면 너비 0 ~ 1024px */
-    @media (max-width: 1024px){
-
-    }
-
-    /* 화면 너비 0 ~ 960px */
-    @media (max-width: 960px){
-        #cont_right { 
-            position: static; 
-            /* static = position: absolute 를 기본 값으로 변경 */
-            width: 100%; border-top: 1px solid #dbdbdb;
-        }
-        #cont_center {margin-right: 0; border-right: 0;}
-
-        /* 3줄 */
-        .nav > div {float: none; width: 100%;}
-        .nav > div:last-child {width: 100%;}
-        .nav > div li {width: 33.33333%;}
-        .nav > div:last-child li {width: 33.33333%;}
-        .nav > div ol {margin-bottom: 10px;}
-    }
-
-    /* 화면 너비 0 ~ 768px */
-    @media (max-width: 768px){
-        #cont_left {float: none; width: 100%;}
-        #cont_center {border-left: 0;}
-    }
-
-    /* 화면 너비 0 ~ 600px */
-    @media (max-width: 600px){
-        .header {height: auto;} /* height 값 초기화 */
-        .header .header_tit {display: none;}
-        .header .header_icon {display: none;}
-        .title .btn {display: none;}
-        
-        /* 2줄 */
-        .nav > div li {width: 50%;}
-        .nav > div:last-child li {width: 50%;}
-        
-        .column.col1 {padding: 0; border-bottom: 0;}
-        .column.col1 .col_tit {display: none;}
-        .column.col1 .col_desc {display: none;}
-        
-        .column.col1 .menu ul {overflow: hidden;}
-        .column.col1 .menu li {float: left; width: 33.3333%; border-right: 1px solid #dbdbdb; text-align: center;}
-        .column.col1 .menu li i {display: none;}
-        .column.col1 .menu li a {color: #fff;}
-    }
-
-    /* 화면 너비 0 ~ 480px */
-    @media (max-width: 480px){
-
-    }
-
-    /* 화면 너비 0 ~ 320px */
-    @media (max-width: 320px){
-        /* 1줄 */
-        .nav > div li {width: 100%;}
-        .nav > div:last-child li {width: 100%;}
+    /* 블로그1 */
+    .blog1 img {width: 100%;}
+    .blog1 .img-retina {display: none;}
+    
+    /* 화면 비율이 1.5x 일 때 */
+    @media only screen and (-webkit-min-device-pixel-ratio: 1.5),
+        only screen and (min-device-pixel-ratio: 1.5),
+        only screen and (min-resolution: 1.5dppx) {
+            .blog1 .img-retina {display: initial;}
+            .blog1 .img-normal {display: none;}
     }
