--- a/02-RESPONSIVE/css/media.css
+++ b/02-RESPONSIVE/css/media.css
@@ -5,11 +5,14 @@
         #contents .container {border: 0;} 
         /* border = scrollbar 가 생기는 영역 */
         .title .btn {right: 5px;} /* 여백 */
+        .square a {width: 24%;} /* 4개 */
+        .square a:nth-child(5n) {display: none;} /* 4개 */
     }
 
     /* 화면 너비 0 ~ 1024px */
     @media (max-width: 1024px){
-
+        .square a {width: 32.3333%;} /* 9개 */
+        .square a:nth-child(5) {display: block;} /* 4개 */
     }
 
     /* 화면 너비 0 ~ 960px */
@@ -27,6 +30,11 @@
         .nav > div li {width: 33.33333%;}
         .nav > div:last-child li {width: 33.33333%;}
         .nav > div ol {margin-bottom: 10px;}
+        
+        #cont_right {overflow: hidden;}
+        #cont_right .column {float: left; width: 33.3333%; box-sizing: border-box;}
+        #cont_right .column.col7 {border-right: 1px solid #dbdbdb; border-bottom: 0;}
+        #cont_right .column.col8 {border-right: 1px solid #dbdbdb; border-bottom: 0;}
     }
 
     /* 화면 너비 0 ~ 768px */
@@ -61,6 +69,17 @@
         .column.col1 .menu li a i {display: none;}
         .column.col2 {background: #fff;}
         .column.col4 {border-top: 1px solid #dbdbdb;}
+        
+        .slider figcaption {padding: 10px;}
+        .slider figcaption em {font-size: 18px;}
+        .slider figcaption span {font-size: 14px;}  
+        
+        .square a {width: 49%;} /* 9개 */
+        .square a:nth-child(5n) {display: none;} /* 4개 */
+        
+        #cont_right .column {width: 50%;}
+        #cont_right .column.col8 {border-right: 0;}
+        #cont_right .column.col9 {display: none;}
     }
 
     /* 화면 너비 0 ~ 480px */
@@ -73,4 +92,11 @@
         /* 1줄 */
         .nav > div li {width: 100%;}
         .nav > div:last-child li {width: 100%;}
+        
+        .square a {width: 100%; margin-right: 0; margin-left: 0;} /* 9개 */
+        
+        #cont_right .column {width: 100%;}
+        #cont_right .column.col7 {border-right: 0; border-bottom: 1px solid #dbdbdb;}
+        #cont_right .column.col8 {border-bottom: 1px solid #dbdbdb;}
+        #cont_right .column.col9 {display: block; border-right: 0;}
     }
