--- a/css/index.css
+++ b/css/index.css
@@ -120,7 +120,7 @@
     }
     
     /* 관심정보 */
-    .fav_info {background: #ccc; padding: 0 0 100px;}
+    .fav_info {background: #f9f9f9; padding: 0 0 100px;}
     .fav_info .left {width: 384px; float: left;}
     .fav_info .left > a {
         display: block; height: 65px; background: #3f69b8; border-radius: 5px; font-size: 19px; color: #fff; font-weight: bold; line-height: 65px; 
@@ -166,10 +166,12 @@
         color: #333;
     }
     .info_list li a:after {
-        content: "";
-        position: absolute; right: 0; top: 50%;
+        content: '';
+        position: absolute; right: 30px; top: 50%;
         width: 26px; height: 26px; border-radius: 100%;
-        border: 1px solid #ddd; background: url(../img/sBtn_next.png) no-repeat center; transform: translateY(-50%);
+        border: 1px solid #ddd;
+        background: url(../img/sArrow_next.png) no-repeat center;
+        transform: translateY(-50%);
     }
     .info_list li a strong {
         display: inline-block; 
